Ret 3816 and RET-3868 (#1020)